# weighted-coloring-problem

./: .gitignore  CMakeLists.txt  main.cpp  run.sh
src/algorithms/: SequentialSolver.cpp  SequentialSolver.h
src/enums/: VertexColor.h
src/models/: Edge.cpp  Edge.h  WeightedGraph.cpp  WeightedGraph.h
src/utils/factories/: WeightedGraphFactory.cpp  WeightedGraphFactory.h
